# amberol

./: .editorconfig  .gitignore  .gitlab-ci.yml  .rustfmt.toml  .typos.toml  CHANGES.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  amberol.doap  io.bassi.Amberol.json  meson.build  meson_options.txt
.reuse/: dep5
build-aux/: checks.sh
data/: io.bassi.Amberol.appdata.xml.in.in  io.bassi.Amberol.desktop.in.in  io.bassi.Amberol.gschema.xml  io.bassi.Amberol.metainfo.xml.in.in  io.bassi.Amberol.service.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  is.po  it.po  ka.po  ko.po  lt.po  meson.build  my.po  nb.po  ne.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  (+5 more)
src/: amberol.gresource.xml  application.rs  config.rs.in  cover_picture.rs  drag_overlay.rs  main.rs  marquee.rs  meson.build  playback_control.rs  playlist_view.rs  queue_row.rs  search.rs  song_cover.rs  song_details.rs  sort.rs  utils.rs  volume_control.rs  waveform_view.rs  window.rs
src/audio/: controller.rs  cover_cache.rs  gst_backend.rs  inhibit_controller.rs  mod.rs  mpris_controller.rs  player.rs  queue.rs  shuffle.rs  song.rs  state.rs  waveform_generator.rs
src/gtk/: help-overlay.ui  playback-control.ui  playlist-view.ui  queue-row.ui  song-cover.ui  song-details.ui  style-dark.css  style-hc.css  style.css  volume-control.ui  window.ui
