# SPDX-FileCopyrightText: 2022  Emmanuele Bassi
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "amberol"
authors = ["Emmanuele Bassi <ebassi@gnome.org>"]
version = "0.1.0"
edition = "2018"

[dependencies]
color-thief = "0.2.1"
gdk-pixbuf = { version = "0.17", features = ["v2_42"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_10"] }
lofty = "0.11.0"
log = "0.4"
mpris-player = "0.6"
once_cell = "1.10"
pretty_env_logger = "0.4"
rand = "0.8.5"
regex = "1.3.4"
serde_json = "1.0"
sha2 = "0.10.2"
fuzzy-matcher = "0.3.7"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
ashpd = {version = "0.4.0", features = ["gtk4"]}

[dependencies.adw]
package = "libadwaita"
version = "0.3"
features = ["v1_2"]

[dependencies.gst]
package = "gstreamer"
version = "0.20"

[dependencies.gst-audio]
package = "gstreamer-audio"
version = "0.20"

[dependencies.gst-player]
package = "gstreamer-player"
version = "0.20"
