# SPDX-FileCopyrightText: 2022  Emmanuele Bassi
# SPDX-License-Identifier: GPL-3.0-or-later

i18n.gettext(
  'amberol',
  args: [
    '--keyword=i18n',
    '--keyword=i18n_f',
    '--keyword=i18n_k',
    '--keyword=ni18n:1,2',
    '--keyword=ni18n_f:1,2',
    '--keyword=ni18n_k:1,2',
  ],
  preset: 'glib',
)
